# fan_remote

./: Cargo.toml  LICENSE.mit  README.md  deny.toml  fan_remote.firejail  fan_remote.service  fan_remote.socket  install.sh  run.sh
src/: main.rs
