[package]
name = "fan_remote"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = { version = "4.3.1", default-features = false }
gumdrop = "0.8.1"
thiserror = "1.0.40"
notify-rust = { version = "4.8.0", optional = true }
listenfd = "1.0.1"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 1

[features]
default = ["notify-rust"]
